moving comments to comments

--- a/paper/abstract.tex
+++ b/paper/abstract.tex
@@ -4,12 +4,12 @@ The rotational evolution of cool dwarfs is mostly unconstrained after around
 2-3 billion years, and the gyrochronology relations are poorly calibrated
 beyond this time due to a lack of precise ages and rotation periods for old
 main-sequence stars.
-% However, recent evidence suggests that the relationship between rotation
-% period and color/temperature/mass does not remain constant over large
-% timescales, contradicting a long-held assumption that underlies many
-% gyrochronology relations.
-We use the velocities of populations of K dwarfs to reveal the rotational
-evolution of these cool stars at old ages.
+However, recent evidence suggests that the relationship between rotation
+period and color/temperature/mass does not remain constant over large
+timescales, contradicting a long-held assumption that underlies many
+gyrochronology relations.
+We use the velocities of populations of cool dwarfs to reveal the rotational
+evolution of these stars at old ages.
 We find that groups of stars, selected to be the same age using a
 gyrochronology relation calibrated to the Praesepe cluster, do {\it not} have
 the same velocity dispersion at all temperatures; cooler stars have greater
@@ -24,21 +24,3 @@ These observations could be reproduced by mass-dependent dynamical heating,
 where lower-mass stars experience a greater rate of dynamical heating than
 higher-mass stars, however we find no evidence for mass-dependent heating
 within K and M dwarfs in the \kepler\ field.
-
-% We show however, that if mass-dependent heating is responsible, the
-% differential heating rate is not constant over logarithmic time intervals
-% which implies that different heating processes must be acting before and after
-% ages of around 1 Gyr.
-% Perhaps a more likely scenario is that the relation between rotation period
-% and color changes over time, undergoing a particularly sharp transition at
-% around 1 Gyr.
-% If we assume that mass-dependent heating does not affect the data,
-
-% (similar to the age of the rotation gap and the 1.1 Gyr NGC 6811
-% cluster, shown to have a different period-color relation to Praesepe).
-% We find that the ages of field stars with measured rotation periods do not
-% exceed 4-6 Gyrs, resolving a long-standing degeneracy between age and magnetic
-% braking efficiency.
-% We also show that stars rotating just below the rotation period gap are
-% dynamically young, ruling out the possibility that the rotation period gap is
-% caused by incorrect period measurements or binary companions.
