--- a/paper/intro.tex
+++ b/paper/intro.tex
@@ -37,8 +37,6 @@ further indication that the exponent of the period-age relation is
 mass and time-dependent \citep{curtis2019}.
 This cluster has a flattened relationship between rotation period and color
 and the G dwarfs rotate at the same rate as the K dwarfs.
-% Since a separable period-age and period-color relation provided an adequate
-% fit for the young stars, it was naturally assumed to apply to old stars too.
 
 In this paper, we tested the \citet{angus2019} gyrochronology relation, a
 separable relation, calibrated using the period-color relation of Praesepe (in
@@ -47,10 +45,6 @@ The large number of Praesepe members with precise rotation periods from the
 \ktwo\ mission \citep{douglas2017, rebull2017}, spanning spectral types F
 through early M, makes it a good cluster for calibrating the period-color
 relation of stars at 650 Myrs.
-% This relation was calibrated by fitting a 5th-order polynomial to the relation
-% between (log) rotation period and (log) \gaia\ \gcolor\ color for around 800
-% members of the Praesepe cluster, and a straight line in (log) age to Praesepe
-% and the Sun.
 This relation accurately describes the rotation periods of F and G stars up to
 around 2.5 Gyr (the age of NGC 6819 -- the oldest cluster with available
 rotation periods), but over-predicts the rotation periods of K dwarfs in the
@@ -82,19 +76,8 @@ it is probably under-predicting the ages of some of these low-mass stars.
 It is therefore likely that old M dwarfs rotate more rapidly than this
 Praesepe-based model predicts.
 In what follows we use a population-based stellar age indicator, velocity
-dispersion, to investigate the period-color relations at old ages in the
-field.
-
-% In this paper, we shed light on the rotational evolution of old K dwarfs using
-% population-based dynamical ages.
-% Unfortunately, open clusters with rotation period measurements are mostly
-% young -- currently the oldest is 2.5 Gyr (NGC 6819).
-% Without rotation periods for precisely dated old stars, it is extremely
-% difficult to calibrate the relationship between rotation period and color at
-% old ages.
-% For this reason, we used a population-based stellar age indicator, velocity
-% dispersion, to investigate the period-color relations at old ages in the
-% field.
+dispersion, to further investigate the gyrochronology relations at old ages in
+the field.
 
 \subsection{Kinematics as an age proxy}
 
@@ -102,8 +85,6 @@ Stars are thought to be born in the thin disk of the Milky Way (MW), orbiting
 the center of the galaxy with a low out-of-plane, or vertical, velocity ($W$,
 or $v_z$), just like the star-forming molecular gas observed in the disk today
 \citep[\eg][]{stark1989, stark2005, aumer2009, martig2014, aumer2016}.
-% because the MW's gas disk is thin and its gas moves in circular
-% orbits.
 Young stars have relatively small vertical velocities, but gain momentum in
 the vertical direction over time \citep[\eg][]{nordstrom2004, holmberg2007,
 holmberg2009, aumer2009, casagrande2011}.
@@ -117,9 +98,6 @@ on average, that group is old or young relative to other groups.
 In this work we compare the velocity dispersions of groups of stars to
 ascertain which groups are older and which younger and draw conclusions based
 on the implied relative ages of populations.
-% Stellar velocities have a history of being used as an age proxy, with several
-% notable examples within stellar astronomy \citep[\eg][]{faherty2009,
-% west2011}.
 The age-velocity dispersion relations (AVRs) are still actively being
 calibrated, so it is difficult to directly compare gyrochronal ages with
 kinematic ones.
@@ -127,13 +105,7 @@ However, regardless of the exact relation between velocity dispersion and
 stellar age, it is expected to be a monotonic relationship, therefore velocity
 dispersion can be used effectively to {\it rank} groups of stars by age.
 
-% Vertical {\it actions} are better age indicators than velocities, because
-% actions are calculated by integrating angular momentum over the Milky Way's
-% potential, and are therefore position invariant -- \eg\ a star will have the
-% same action at periapsis and apoapsis.
-% In contrast, orbital velocities are different at periapsis and apoapsis -- so
-% in this sense, {\it actions} are the natural quantities to use as age proxies.
-Vertical action is a better age indicator than vertical velocity
+Vertical action is thought to be a better age indicator than vertical velocity
 \citep{ting2019}, although still only a weak age indicator for individual
 stars \citep{beane2018}, however both vertical action ($J_z$) and vertical
 velocity (\vz/W) can only be calculated with full 6-dimensional position and
@@ -146,68 +118,13 @@ The \kepler\ field is positioned at low galactic latitude (b=5-20\degrees), so
 \vb\ is a close (although imperfect -- see section \ref{sec:results})
 approximation to \vz.
 
-% \subsection{The degeneracy between gyrochronology and mass-dependent heating}
-
-% Although only calibrated using Praesepe ($\sim$ 650 Myr) and the Sun (4.56
-% Gyr), the \citet{angus2019} gyrochronology relation predicts accurate ages for
-% members of NGC 6819, a 2.5 Gyr open cluster.
-% However there are no rotation periods for K or M dwarfs in this cluster -- its
-% coolest members with rotation periods are G dwarfs.
-% The period-color relation of Praesepe is nearly identical to the period-color
-% relation of the Hyades, a cluster of around the same age: $\sim$ 650 years
-% \citep{douglas2016, douglas2017, rebull2017}.
-% However, Praesepe and the Hyades do {\it not} have the same period-color
-% relation as NGC 6811, a 1.1 Gyr cluster \citep{curtis2019}.
-% The G dwarfs in NGC 6811 rotate at the same rate as the K dwarfs and it
-% appears as though the K stars have `stalled' -- their spin-down has been
-% halted.
-
-% The \citet{angus2019} gyrochronology relation assumes that the rotation
-% period-color relation of Praesepe is applicable to stars of all ages: the same
-% polynomial relation fit to Praesepe is used to describe the period-color
-% relation for all stars.
-% However, the NGC 6811 cluster suggests that this assumption does not hold for
-% K dwarfs past around 1 Gyr.
-% If the period-color relation of the \citet{angus2019} gyrochronology model
-% {\it were} a perfect model for the rotational evolution of stars, then groups
-% of stars selected to be similar ages using this relation should fall on an
-% isochrone on a CMD.
-% % and have the same velocity dispersion across all colors.
-% Unfortunately, uncertainties on \gaia\ photometry and parallaxes, plus
-% variations in metallicity and extinction, blur out the main sequence enough
-% that differences between stars in different age and rotation bins are not
-% easily discernable on the CMD, although there is still a general age and
-% rotation period gradient on the CMD, as seen in figures \ref{fig:CMD_cuts} and
-% \ref{fig:age_gradient}.
-% For this reason, we chose to use {\it kinematic} `isochrones', instead of
-% magnitude and color-based isochrones: although kinematics as an age indicator
-% is not necessarily as well calibrated to an absolute age scale as CMD
-% position, it can be very sensitive to {\it differences} in the ages of stellar
-% populations.
-
-% Isochrones and stellar evolution tracks are highly dependent on choices made
-% about input physics and assumptions.
-% % and have often been calibrated using
-% % different types of stars.
-% As a result, different sets of models can have very different shapes on the
-% CMD, particularly at low masses.
-% In fact, only empirical models, not physical ones, are currently able to
-% reproduce the CMD positions of M dwarfs.
-% Instead of relying on CMD position to age-date groups of stars, we opted to
-% explore age trends via kinematics.
-% Kinematic age-dating has the advantage of being relatively model independent,
-% or at least, having a very simple model: that velocity dispersion increases
-% over time.
-% This means that it is relatively easy to rank groups of stars by age: older
-% groups have a larger velocity dispersion.
 
 This paper is laid out as follows: in section \ref{sec:the_data} we describe
 our sample selection process and the methods used to calculated stellar
 velocities.
 In section \ref{sec:results} we use stellar kinematics to investigate the
-relationship between rotation period, age and color/\teff\ in field stars.
+relationship between rotation period, age and color/\teff\ in the field.
 In section \ref{sec:mass-dependent-heating} we show that neither
 mass-dependent heating nor the selection function is likely to have a strong
-affect on our sample.
-Finally, in section \ref{sec:period_gap} we discuss the implications of our
-results.
+affect on our sample, and in section \ref{sec:period_gap} we discuss the
+implications of our results.
